[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/deck/Deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/networking/hub/Hub.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/deck/DecksManager.gd" type="Script" id=3]
[ext_resource path="res://src/GameManager.gd" type="Script" id=4]
[ext_resource path="res://src/Camera.gd" type="Script" id=5]
[ext_resource path="res://src/gamestates/Distribute.gd" type="Script" id=6]
[ext_resource path="res://src/gamestates/GameStates.gd" type="Script" id=7]
[ext_resource path="res://src/gamestates/ChooseStarter.gd" type="Script" id=8]
[ext_resource path="res://Turn.gd" type="Script" id=9]
[ext_resource path="res://src/Table.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/gamestates/action-handlers/PlaceHandler.gd" type="Script" id=11]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 0.54902, 0.54902, 0.54902, 1 )
fog_depth_begin = 113.9
fog_depth_end = 48.1

[node name="GameManager" type="Spatial"]
script = ExtResource( 4 )

[node name="GameStates" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Distribute" type="Node" parent="GameStates"]
script = ExtResource( 6 )
distribution_time = 1.0

[node name="ChooseStarter" type="Node" parent="GameStates"]
script = ExtResource( 8 )

[node name="Turn" type="Node" parent="GameStates"]
script = ExtResource( 9 )

[node name="PlaceHandler" type="Node" parent="GameStates/Turn"]
script = ExtResource( 11 )

[node name="AttackHandler" type="Node" parent="GameStates/Turn"]

[node name="DefenseHandler" type="Node" parent="GameStates/Turn"]

[node name="GobbitHandler" type="Node" parent="GameStates/Turn"]

[node name="MouseRay" type="RayCast" parent="GameStates/Turn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5948, 3.30367 )
enabled = true
cast_to = Vector3( 0, 0, 0 )
collision_mask = 3
collide_with_areas = true

[node name="Pivot" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Rail" type="Tween" parent="Pivot"]

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, 0, 10, 0 )
environment = SubResource( 1 )

[node name="PlayerPOV" type="Spatial" parent="Pivot"]
transform = Transform( -1.62921e-07, -0.866025, 0.5, 0, 0.5, 0.866025, -1, 1.41093e-07, -8.14603e-08, 4, 4.5, 0 )

[node name="CameraLobby" type="Spatial" parent="Pivot"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 0, 10, 0 )

[node name="Table" parent="." instance=ExtResource( 10 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.0126213, -0.582162, 0.812975, -0.0772258, 0.810044, 0.581262, -0.996934, -0.0701189, -0.0347341, 13.5591, 4.13921, -1.89672 )
light_energy = 0.24
shadow_enabled = true
shadow_bias = 0.05
shadow_contact = 0.14

[node name="Decks" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Graveyard" parent="Decks" instance=ExtResource( 1 )]

[node name="Cards" type="Spatial" parent="."]

[node name="Hub" parent="." instance=ExtResource( 2 )]
